tests/NormalTests/paczka1/small_fuzzy/26225979.err
Error in line 7: 18 A796 78,6
Error in line 6: A796 S869 30,5
Error in line 9: A796 A363 35,5
Error in line 14: 97yC9b S270 82,30
